footer in progress

--- a/src/views/blocks/index-page/contact.pug
+++ b/src/views/blocks/index-page/contact.pug
@@ -5,15 +5,14 @@ section.section-contact
       input(type="text" id="name" placeholder="Name").form__input
       input(type="email" id="email" placeholder="Email").form__input
       input(type="text" id="subject" placeholder="Subject").form__input
-      input(type="textarea" id="message" placeholder="Your message" height="200px").form__input.textarea__input
+      textarea(type="textarea" id="message" placeholder="Your message").form__input.textarea__input
       button.form__btn.btn Submit
     .section-contact__clients.clients
-      h2.clients__title Our happy clients
+      h2.clients__title.title Our happy clients
       ul.clients__list
         li.clients__item
           a(href="#").clients__link Zara
-            svg(width="162" height="22").clients__svg
-              use(xlink:href="#Zara_Logo")
+            img(src="/assets/images/Zara_logo.png").clients__svg
         li.clients__item
           a(href="#").clients__link Mango
             svg(width="138" height="22").clients__svg
@@ -24,8 +23,7 @@ section.section-contact
               use(xlink:href='#Barneys_New_York_Logo')
         li.clients__item
           a(href="#").clients__link Gucci
-            svg(width="140" height="21").clients__svg
-              use(xlink:href='#Gucci_logo')
+            img(src="/assets/images/Gucci_logo.png").clients__svg
         li.clients__item
           a(href="#").clients__link Calvin Klein
             svg(width="151" height="24").clients__svg
@@ -44,8 +42,7 @@ section.section-contact
               use(xlink:href='#Puma_logo')
         li.clients__item
           a(href="#").clients__link Levi's
-            svg(width="109" height="53").clients__svg
-              use(xlink:href='#Levis_logo')
+            img(src="/assets/images/Levis_logo.png").clients__svg
         li.clients__item
           a(href="#").clients__link Billa bong
             svg(width="130" height="70").clients__svg
