--- a/src/views/blocks/index-page/footer.pug
+++ b/src/views/blocks/index-page/footer.pug
@@ -3,7 +3,7 @@ section.section-footer
     h2.visually-hidden Footer
     ul.section-footer__items
       li.section-footer__logo.logo
-        svg(width="10" height="10").logo__svg
+        img(src="./assets/images/logo.png").logo__img
         p.logo__text
           |lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh elit. Duis sed odio sit amet auctror a ornare odio non mauris vitae erat in elit
       li.section-footer__contacts.contacts
