--- a/src/assets/styles/blocks/index-page/contact.scss
+++ b/src/assets/styles/blocks/index-page/contact.scss
@@ -1,5 +1,6 @@
 .section-contact {
   width: 100%;
+  padding-bottom: 70px;
 }
 
 .section-contact__wrapper {
@@ -11,13 +12,18 @@
 .section-contact__form {
   display: flex;
   flex-direction: column;
-  width: 490px;
+  width: 50%;
+}
+
+.form__title, .clients__title {
+  font-weight: 700;
+  color: #413d4b;
 }
 
 .form__input {
-  width: 460px;
   height: 45px;
   margin-top: 23px;
+  padding-left: 22px;
 }
 
 .form__btn {
@@ -26,7 +32,9 @@
 }
 
 .textarea__input {
-  padding: 0;
+  padding-left: 22px;
+  padding-top: 20px;
+  height: 200px;
 }
 
 textarea::placeholder {
@@ -34,14 +42,32 @@ textarea::placeholder {
 }
 
 .section-contact__clients {
-  width: 400px;
+  width: 50%;
+  box-sizing: border-box;
+}
+
+.clients__title {
+  margin-left: 130px;
 }
 
 .clients__list {
+  width: 100%;
+  margin-left: 100px;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  padding: 0;
   list-style: none;
+}
+
+.clients__item {
+  width: 50%;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
 }
 
 .clients__link {
