footer still in progress

--- a/src/views/blocks/index-page/footer.pug
+++ b/src/views/blocks/index-page/footer.pug
@@ -20,22 +20,22 @@ section.section-footer
         ul.socials__links
           li.socials__item
             a(href="#").socials__link facebook
-              svg(width="10" height="10").socials__svg
+              img(src="/assets/images/fb.png").socials__img
           li.socials__item
             a(href="#").socials__link twitter
-              svg(width="10" height="10").socials__svg
+              img(src="/assets/images/twitter.png").socials__img
           li.socials__item
-            a(href="#").socials__link dribble
-              svg(width="10" height="10").socials__svg
+            a(href="#").socials__link dribbble
+              img(src="/assets/images/dribbble.png").socials__img
           li.socials__item
             a(href="#").socials__link instagram
-              svg(width="10" height="10").socials__svg
+              img(src="/assets/images/insta.png").socials__img
           li.socials__item
             a(href="#").socials__link google+
-              svg(width="10" height="10").socials__svg
+              img(src="/assets/images/google.png").socials__img
           li.socials__item
             a(href="#").socials__link youtube
-              svg(width="10" height="10").socials__svg
+              img(src="/assets/images/youtube.png").socials__img
     .section-footer__bottom
       ul.section-footer__info.bottom
         li.bottom__item
