--- a/src/assets/styles/blocks/index-page/footer.scss
+++ b/src/assets/styles/blocks/index-page/footer.scss
@@ -56,3 +56,29 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+
+.socials__links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin-top: 37px;
+  list-style: none;
+  text-decoration: none;
+}
+
+.socials__item {
+  font-size: 0;
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  box-sizing: border-box;
+  background-color: transparent;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+
+.socials__link {
+  align-self: center;
+}
