--- a/src/views/blocks/index-page/works.pug
+++ b/src/views/blocks/index-page/works.pug
@@ -2,7 +2,7 @@ section.section-works
   .section-works__wrapper.wrapper
     .section-works__info.info
       h2.info__title.title Our works
-      a.info__link(href="#") See all project in dribble
+      a.info__link(href="#") See all Project in dribble
     ul.section-works__list.works
       li.works__item
         a.works__link(href="#") 1
