--- a/src/assets/styles/blocks/index-page/contact.scss
+++ b/src/assets/styles/blocks/index-page/contact.scss
@@ -29,6 +29,10 @@
 .form__btn {
   margin-top: 21px;
   width: 120px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
 
 .textarea__input {
