--- a/src/assets/styles/blocks/index-page/works.scss
+++ b/src/assets/styles/blocks/index-page/works.scss
@@ -24,6 +24,7 @@
   color: #413d4b;
   font-weight: 700;
   font-size: 22px;
+  text-transform: uppercase;
 }
 
 .info__link {
@@ -67,4 +68,8 @@
 
 .section-works__btn {
   margin-top: 70px;
+  padding-left: 28px;
+  padding-right: 28px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
