--- a/src/assets/styles/blocks/index-page/advantages.scss
+++ b/src/assets/styles/blocks/index-page/advantages.scss
@@ -1,7 +1,7 @@
 .section-advantages {
   width: 100%;
-  padding-top: 72px;
-  padding-bottom: 68px;
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
 .section-advantages__wrapper {
@@ -37,11 +37,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
   padding: 0;
   margin: 0;
   margin-top: 68px;
   margin-bottom: -79px;
-  width: 894px;
   list-style: none;
 }
 
