--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -119,3 +119,19 @@
   background-color: #00e0d0;
   border: transparent;
 }
+
+@media(max-width: 1140px) {
+  .section-header__navbar {
+    width: 740px;
+  }
+
+  .section-header__main {
+    width: 740px;
+  }
+}
+
+// @media(min-width: 980px) {
+//   .section-header__navbar {
+//     width: 540px;
+//   }
+// }
