--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -130,8 +130,8 @@
   }
 }
 
-// @media(min-width: 980px) {
-//   .section-header__navbar {
-//     width: 540px;
-//   }
-// }
+@media(max-width: 900px) {
+  // .section-header__navbar {
+  //   width: 540px;
+  // }
+}
