--- a/src/views/blocks/index-page/header.pug
+++ b/src/views/blocks/index-page/header.pug
@@ -4,7 +4,9 @@ section.section-header
     .section-header__logo.logo
       picture.logo__img
         img(src="./assets/images/logo.png")
-    ul.nav__list
+    button.section-header__burger
+      span.section-header__burger-text Развернуть
+    ul.nav__list.nav__mobile
       li.nav__item
         a(href="#").nav__link Home
       li.nav__item
