--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -26,6 +26,13 @@
   height: 50px;
 }
 
+.section-header__burger {
+  background-color: transparent;
+  border: none;
+  position: relative;
+  font-size: 0;
+}
+
 .nav__list {
   display: flex;
   list-style: none;
@@ -131,7 +138,68 @@
 }
 
 @media(max-width: 900px) {
-  // .section-header__navbar {
-  //   width: 540px;
-  // }
+  .section-header {
+    padding-bottom: 30px;
+  }
+
+  .section-header__navbar {
+    width: 540px;
+    flex-wrap: wrap;
+  }
+
+  .section-header__logo {
+    width: 50%;
+  }
+
+  .section-header__burger {
+    width: 50%;
+    justify-content: flex-end;
+    cursor: pointer;
+  }
+
+  .section-header__burger::before, .section-header__burger::after {
+    content: '';
+    display: block;
+  }
+
+  .section-header__burger::before,
+  .section-header__burger-text,
+  .section-header__burger::after {
+    position: absolute;
+    height: 1px;
+    width: 40px;
+    background-color: white;
+    right: 0;
+  }
+
+  .section-header__burger::before {
+    top: 16px;
+  }
+
+  .section-header__burger::after {
+    bottom: 16px;
+  }
+
+  .nav__list {
+    flex-direction: column;
+    font-size: 15px;
+    margin-top: -10px;
+  }
+
+  .nav__item {
+    margin-top: 10px;
+  }
+
+  .nav__mobile {
+    font-size: 0;
+  }
+
+  .section-header__main {
+    width: 540px;
+    margin-top: 30px;
+  }
+
+  .main__dotnav {
+    margin-top: 30px;
+  }
 }
