some troubles with wrapper size on small screens

--- a/src/assets/styles/blocks/index-page/footer.scss
+++ b/src/assets/styles/blocks/index-page/footer.scss
@@ -247,4 +247,14 @@
   .section-footer__wrapper {
     width: 540px;
   }
+
+  .contacts__title {
+    align-self: flex-start;
+    font-size: 14px;
+  }
+
+  .section-footer__bottom {
+    flex-direction: column;
+  }
+
 }
