--- a/src/assets/styles/blocks/index-page/works.scss
+++ b/src/assets/styles/blocks/index-page/works.scss
@@ -94,6 +94,12 @@
 
   .section-works__info {
     width: 540px;
+    justify-content: center;
+    padding-bottom: 30px;
+  }
+
+  .info__title {
+    margin-right: 110px
   }
 
   .works__item {
