--- a/src/assets/styles/blocks/index-page/contact.scss
+++ b/src/assets/styles/blocks/index-page/contact.scss
@@ -122,12 +122,21 @@ textarea::placeholder {
     margin: 0;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    margin-right: -15px;
   }
 
   .clients__item {
     width: 30%;
     padding: 0;
     margin: 0;
-    justify-content: flex-start;
+    justify-content: center;
+    margin-right: 15px;
+  }
+}
+
+@media(max-width: 500px) {
+  .section-contact__wrapper {
+    width: 400px;
   }
 }
