--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -203,3 +203,13 @@
     margin-top: 30px;
   }
 }
+
+@media(max-width: 500px) {
+  .section-header__navbar {
+    width: 400px;
+  }
+
+  .section-header__main {
+    width: 400px;
+  }
+}
