--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -3,6 +3,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1;
+  min-width: 320px;
 }
 
 img {
@@ -86,4 +87,18 @@ img {
 .btn:hover {
   color: white;
   background-color: #00e0d0;
+}
+
+@media(max-width: 900px) {
+  .title {
+    font-size: 22px;
+  }
+
+  .subtitle {
+    font-size: 12px;
+  }
+
+  .text {
+    font-size: 10px;
+  }
 }
