--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -129,11 +129,11 @@
 
 @media(max-width: 1140px) {
   .section-header__navbar {
-    width: 740px;
+    width: auto;
   }
 
   .section-header__main {
-    width: 740px;
+    width: auto;
   }
 }
 
@@ -143,7 +143,6 @@
   }
 
   .section-header__navbar {
-    width: 540px;
     flex-wrap: wrap;
   }
 
@@ -195,7 +194,6 @@
   }
 
   .section-header__main {
-    width: 540px;
     margin-top: 30px;
   }
 
@@ -205,11 +203,5 @@
 }
 
 @media(max-width: 500px) {
-  .section-header__navbar {
-    width: 400px;
-  }
 
-  .section-header__main {
-    width: 400px;
-  }
 }
