--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -139,15 +139,20 @@
 
 @media(max-width: 900px) {
   .section-header {
+    width: 100%;
     padding-bottom: 30px;
   }
 
   .section-header__navbar {
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    width: 100%;
+    margin: 0;
   }
 
   .section-header__logo {
     width: 50%;
+    padding-left: 10px;
+    padding-top: 20px;
   }
 
   .section-header__burger {
@@ -172,11 +177,11 @@
   }
 
   .section-header__burger::before {
-    top: 16px;
+    top: 25px;
   }
 
   .section-header__burger::after {
-    bottom: 16px;
+    bottom: 25px;
   }
 
   .nav__list {
