--- a/src/views/blocks/index-page/about.pug
+++ b/src/views/blocks/index-page/about.pug
@@ -8,5 +8,5 @@ section.section-about
         br
         |Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
       button.about__btn.btn Learn more
-    picture.about__img
+    picture.section-about__img
       img(src="/assets/images/logo_color.png")
