--- a/src/assets/styles/blocks/index-page/video.scss
+++ b/src/assets/styles/blocks/index-page/video.scss
@@ -42,12 +42,20 @@
   .section-video__wrapper {
     width: auto;
   }
+
+  img {
+    max-width: 80%;
+  }
 }
 
 @media(max-width: 900px) {
-
+  img {
+    max-width: 70%;
+  }
 }
 
 @media(max-width: 500px) {
-
+  img {
+    max-width: 60%;
+  }
 }
