--- a/src/assets/styles/blocks/index-page/about.scss
+++ b/src/assets/styles/blocks/index-page/about.scss
@@ -52,8 +52,8 @@
     width: 100%;
   }
 
-  .about__img{
-    padding-left: 10px;
+  .section-about__about {
+    padding-right: 10px;
   }
 
   .about__btn {
