--- a/src/assets/styles/blocks/index-page/advantages.scss
+++ b/src/assets/styles/blocks/index-page/advantages.scss
@@ -118,11 +118,15 @@
 
   .advantages__text {
     width: 50%;
-    text-align: left;
-    align-self: flex-end;
+    margin-left: 40px;
+    text-align: center;
+    align-self: center;
   }
 }
 
 @media(max-width: 500px) {
-
+  .section-advantages__wrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
