made some changes need approve

--- a/src/assets/styles/blocks/index-page/advantages.scss
+++ b/src/assets/styles/blocks/index-page/advantages.scss
@@ -118,8 +118,8 @@
 
   .advantages__text {
     width: 50%;
-    margin-left: 40px;
-    text-align: center;
+    margin-left: 0px;
+    text-align: left;
     align-self: center;
   }
 }
