--- a/src/assets/styles/blocks/index-page/about.scss
+++ b/src/assets/styles/blocks/index-page/about.scss
@@ -50,9 +50,12 @@
 @media(max-width: 900px) {
   .section-about__wrapper {
     width: 100%;
+    flex-direction: column;
+    align-items: center;
   }
 
   .section-about__about {
+    padding-left: 10px;
     padding-right: 10px;
   }
 
@@ -61,10 +64,9 @@
   }
 
   .section-about__img {
-    padding-left: 10px;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    margin-bottom: 20px;
   }
-}
-
-@media(max-width: 500px) {
-
 }
