--- a/src/assets/styles/blocks/index-page/footer.scss
+++ b/src/assets/styles/blocks/index-page/footer.scss
@@ -240,6 +240,11 @@
     justify-content: space-between;
   }
 
+  .section-footer__info {
+    padding: 0;
+    margin: 0;
+  }
+
   .section-footer__copyrigh {
     font-size: 14px;
   }
@@ -278,7 +283,8 @@
   }
 
   .contacts__address {
-    text-align: center;
+    width: 90%;
+    // text-align: center;
   }
 
   .socials__img {
