--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -77,6 +77,7 @@
 }
 
 .main__text {
+  max-width: 90%;
   text-align: center;
   margin-top: 52px;
 }
@@ -186,8 +187,9 @@
 
   .nav__list {
     flex-direction: column;
-    font-size: 15px;
     margin-top: -10px;
+    width: 0;
+    height: 0;
   }
 
   .nav__item {
@@ -207,8 +209,4 @@
   .main__dotnav {
     margin-top: 30px;
   }
-}
-
-@media(max-width: 500px) {
-
 }
