added js started to make burger button

--- a/src/views/blocks/index-page/header.pug
+++ b/src/views/blocks/index-page/header.pug
@@ -6,7 +6,7 @@ section.section-header
         img(src="./assets/images/logo.png")
     button.section-header__burger
       span.section-header__burger-text Развернуть
-    ul.nav__list.nav__mobile
+    ul.nav__list
       li.nav__item
         a(href="#").nav__link Home
       li.nav__item
