--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -145,7 +145,7 @@
   }
 
   .section-header__navbar {
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
     margin: 0;
   }
@@ -157,7 +157,8 @@
   }
 
   .section-header__burger {
-    width: 50%;
+    width: 40px;
+    padding-left: 10px;
     justify-content: flex-end;
     cursor: pointer;
   }
@@ -187,17 +188,14 @@
 
   .nav__list {
     flex-direction: column;
-    margin-top: -10px;
-    width: 0;
-    height: 0;
+    // margin-top: -10px;
+    width: 100%;
+    // height: 0;
+    // font-size: 0;
   }
 
   .nav__item {
     margin-top: 10px;
-  }
-
-  .nav__mobile {
-    font-size: 0;
   }
 
   .section-header__main {
