--- a/src/views/base.layout.pug
+++ b/src/views/base.layout.pug
@@ -9,6 +9,7 @@ html(lang="ru-RU")
     link(rel="stylesheet" href="/assets/css/main.min.css")
   body
     block content
+    script(src="assets/js/main.min.js")
     block scripts
 
       .visually-hidden
