--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -148,11 +148,13 @@
     flex-wrap: wrap;
     width: 100%;
     margin: 0;
+    padding: 0 10px;
+    box-sizing: border-box;
   }
 
   .section-header__logo {
     width: 50%;
-    padding-left: 10px;
+    // padding-left: 10px;
     padding-top: 20px;
   }
 
@@ -188,10 +190,14 @@
 
   .nav__list {
     flex-direction: column;
-    // margin-top: -10px;
     width: 100%;
-    // height: 0;
-    // font-size: 0;
+    margin-right: 0;
+    height: 0;
+    overflow: hidden;
+}
+
+  .nav__list--active {
+    height: auto;
   }
 
   .nav__item {
