--- a/src/views/base.layout.pug
+++ b/src/views/base.layout.pug
@@ -7,6 +7,7 @@ html(lang="ru-RU")
     meta(content="width=device-width, initial-scale=1" name="viewport")
     block title
     link(rel="stylesheet" href="/assets/css/main.min.css")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css")
   body
     block content
     script(src="assets/js/main.min.js")
