--- a/src/views/blocks/index-page/header.pug
+++ b/src/views/blocks/index-page/header.pug
@@ -22,9 +22,27 @@ section.section-header
       li.nav__item
         a(href="#").nav__link Contact
   .section-header__main.main
-    h2.main__title.title We Are Awesome Creative Agency
-    p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
-    button.main__btn.btn Learn more
+    ul.main__slider.slider
+      li.slider__item
+        h2.main__title.title We Are Awesome Creative Agency One
+        p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+        button.main__btn.btn Learn more
+      li.slider__item
+        h2.main__title.title We Are Awesome Creative Agency Two
+        p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+        button.main__btn.btn Learn more
+      li.slider__item
+        h2.main__title.title We Are Awesome Creative Agency Three
+        p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+        button.main__btn.btn Learn more
+      li.slider__item
+        h2.main__title.title We Are Awesome Creative Agency Four
+        p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+        button.main__btn.btn Learn more
+      li.slider__item
+        h2.main__title.title We Are Awesome Creative Agency Five
+        p.main__text.text This is Photoshop's version  of Lorem Ipsum.Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+        button.main__btn.btn Learn more
     ul.main__dotnav
       li.main__item
         button.dotnav__btn.dotnav__btn--active 1
@@ -34,3 +52,5 @@ section.section-header
         button.dotnav__btn 3
       li.main__item
         button.dotnav__btn 4
+      li.main__item
+        button.dotnav__btn 5
