tinyslider problems in header

--- a/src/assets/styles/blocks/index-page/header.scss
+++ b/src/assets/styles/blocks/index-page/header.scss
@@ -1,3 +1,15 @@
+// .tns-inner {
+//   display: flex;
+//   flex-wrap: wrap;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+// }
+
+.main {
+  overflow-x: hidden;
+}
+
 .section-header {
   display: flex;
   flex-direction: column;
