--- a/src/views/blocks/index-page/header.pug
+++ b/src/views/blocks/index-page/header.pug
@@ -45,7 +45,7 @@ section.section-header
         button.main__btn.btn Learn more
     ul.main__dotnav
       li.main__item
-        button.dotnav__btn.dotnav__btn--active 1
+        button.dotnav__btn 1
       li.main__item
         button.dotnav__btn 2
       li.main__item
